# voicenode

./: .gitignore  Dockerfile  README.md  asound.state  pyproject.toml  requirements.txt  voicenode.3mf  voicenode.service
image/: Dockerfile  README.md  config.txt  provision.ps1  setup.sh
src/: audio.py  audioprocessor.py  hardware.py  homenode.py  light_patterns.py  main.py  mine.py  mqtt.py  wake_arbitration.py  wakeword.py  wakeword_detector.py
src/debug/: aectest.py  audiotest.py  fullprocesstest.py  lighttest.py  listdevices.py  noisetest.py  plot.py
