
[project]
name="voicenode"
version="0.0.1"
requires-python = "~=3.11"
dependencies = [
  "PyAudio==0.2.14",
  "openwakeword==0.5.1",
  "numpy==1.26.4",
  "scipy==1.16.2",
  "onnxruntime==1.23.0; os_name == 'nt'",
  "tflite-runtime==2.14.0; os_name != 'nt'",
  "speexdsp==0.1.1; os_name != 'nt'",
  "noisereduce==3.0.3",
  "aiomqtt==2.4.0",
  "rpi-lgpio==0.6; os_name != 'nt'",
  "spidev==3.8; os_name != 'nt'",
]
